fix(header)vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,29 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body{
     background-color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#barratop{
-    width: 100%;
-    background-color: white;
-    display: inline-block;    
+header img{
+    vertical-align: middle;
 }
 
-h1{
+header{
+    height: 70px;
+    padding: 10px;
+   
+}
+
+h1{   
     display: inline-block;
-    font-weight: 800
-    ;
+    font-weight: 800;
+    vertical-align: middle;
+    
 }
 
 #comando{
@@ -57,9 +68,11 @@ button{
 
 #editorial_button{
     display: inline-block;
-    /* height: 30px;
-    width: 100px; */
+    height: 20px;
+    width: 80px;
     background-color: rgb(110, 175, 236);
-    border-radius: 20%;
+    border-radius: 10%;
     color: white;
+    text-align: center;
 }
+
